--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run Pylint on the whole project
         run: |
-          pylint ./**/*.py
+          pylint ./**/*.py --fail-under=7
 
       - name: Analysing the code with pylint
         run: |
