import routes are changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   db:
     build: 
@@ -42,6 +43,8 @@ services:
         condition: service_healthy
     networks:
       - net_eam_database
+    environment:
+      - PYTHONPATH=/app
 # --------------------------------------------------------------------
 
 networks:
