--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -2,7 +2,7 @@ FROM mysql:8.0
 
 ENV MYSQL_ROOT_PASSWORD root
 ENV MYSQL_DATABASE reservation
-ENV MYSQL_USER root
+ENV MYSQL_USER user
 ENV MYSQL_PASSWORD root
 
 EXPOSE 3306
